# tonato

./: .gitignore  README.md  tonato.cabal
app/: Main.hs
src/: Nato.hs
src/Text/: Nato.hs
