name:                tonato
version:             0.1.0.3
synopsis:            A command line tool to translate English text to NATO's phonetic alphabet
description:         Please see README.md
homepage:            https://github.com/rimbaudcode/tonato#readme
license:             BSD3
license-file:        LICENSE
author:              art rimbaud
maintainer:          rimbaud1854(dot)91[At]gmail(DOT)com
copyright:           Copyright: (c) 2016 rimbaudcode
category:            value
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -fdefer-type-errors
                       -fforce-recomp
                       -fobject-code
                       -funbox-strict-fields
                       -fwarn-implicit-prelude
                       -fwarn-incomplete-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-incomplete-uni-patterns
                       -fwarn-missing-signatures
                       -fwarn-monomorphism-restriction
                       -fwarn-name-shadowing
                       -fwarn-orphans
                       -fwarn-overlapping-patterns
                       -fwarn-tabs
                       -fwarn-unused-do-bind
                       -fwarn-unused-imports
                       -Wall
                       -Werror
                       -j4
                       -O2
                       -fprof-auto
  exposed-modules:     Text.Nato
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, RebindableSyntax

executable tonato
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:        -fdefer-type-errors
                      -fforce-recomp
                      -fobject-code
                      -funbox-strict-fields
                      -fwarn-implicit-prelude
                      -fwarn-incomplete-patterns
                      -fwarn-incomplete-record-updates
                      -fwarn-incomplete-uni-patterns
                      -fwarn-missing-signatures
                      -fwarn-monomorphism-restriction
                      -fwarn-name-shadowing
                      -fwarn-orphans
                      -fwarn-overlapping-patterns
                      -fwarn-tabs
                      -fwarn-unused-do-bind
                      -fwarn-unused-imports
                      -Wall
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -j4
                      -O2
  build-depends:       base
                     , tonato
                     , bytestring >= 0.10 && < 0.11
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, RebindableSyntax

test-suite tonato-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tonato
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/rimbaudcode/tonato
